--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -30,10 +30,11 @@ jobs:
           context: . # Build context is the current directory (where your Dockerfile is)
           push: true # Enable pushing the image to the registry
           tags: |
-            ${{ secrets.DOCKER_USERNAME }}/stock-data-updater:latest # Tag with 'latest'
-            ${{ secrets.DOCKER_USERNAME }}/stock-data-updater:${{ github.sha }} # Tag with the commit SHA for versioning
+            ${{ secrets.DOCKER_USERNAME }}/stock-data-updater:latest
+            ${{ secrets.DOCKER_USERNAME }}/stock-data-updater:${{ github.sha }}
           # You can add build-args here if your Dockerfile uses them, e.g.:
           # build-args: |
           #   MY_ARG=value
           cache-from: type=gha # Use GitHub Actions cache for faster builds
           cache-to: type=gha,mode=max # Store build cache in GitHub Actions cache
+
