--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -1,40 +1,45 @@
-# .github/workflows/docker-build-push.yml
-
 name: Docker Build and Push
 
 on:
   push:
     branches:
-      - main # Trigger this workflow when changes are pushed to the 'main' branch
+      - main
+    tags:
+      - '*'  # Trigger on tags like v1.0.0, v2.3.4
 
 jobs:
   build_and_push:
-    runs-on: ubuntu-latest # Use the latest Ubuntu runner
+    runs-on: ubuntu-latest
 
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v4 # Action to check out your repository code
+        uses: actions/checkout@v4
 
       - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3 # Action to set up Docker Buildx, which provides enhanced build capabilities
+        uses: docker/setup-buildx-action@v3
 
       - name: Log in to Docker Hub
-        uses: docker/login-action@v3 # Action to log in to Docker Hub
+        uses: docker/login-action@v3
         with:
-          username: ${{ secrets.DOCKER_USERNAME }} # Your Docker Hub username (stored as a GitHub Secret)
-          password: ${{ secrets.DOCKER_TOKEN }}    # Your Docker Hub Access Token (stored as a GitHub Secret)
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_TOKEN }}
+
+      - name: Determine additional tag
+        id: vars
+        run: |
+          echo "tag_list=${{ secrets.DOCKER_USERNAME }}/dolla:latest,${{ secrets.DOCKER_USERNAME }}/dolla:${GITHUB_SHA}" >> $GITHUB_OUTPUT
+          if [[ "${GITHUB_REF}" == refs/tags/* ]]; then
+            echo "is_tag=true" >> $GITHUB_OUTPUT
+            echo "tag_list=${{ secrets.DOCKER_USERNAME }}/dolla:latest,${{ secrets.DOCKER_USERNAME }}/dolla:${GITHUB_SHA},${{ secrets.DOCKER_USERNAME }}/dolla:semistable" >> $GITHUB_OUTPUT
+          else
+            echo "is_tag=false" >> $GITHUB_OUTPUT
+          fi
 
       - name: Build and push Docker image
-        uses: docker/build-push-action@v5 # Action to build and push Docker images
+        uses: docker/build-push-action@v5
         with:
-          context: . # Build context is the current directory (where your Dockerfile is)
-          push: true # Enable pushing the image to the registry
-          tags: |
-            ${{ secrets.DOCKER_USERNAME }}/dolla:latest
-            ${{ secrets.DOCKER_USERNAME }}/dolla:${{ github.sha }}
-          # You can add build-args here if your Dockerfile uses them, e.g.:
-          # build-args: |
-          #   MY_ARG=value
-          cache-from: type=gha # Use GitHub Actions cache for faster builds
-          cache-to: type=gha,mode=max # Store build cache in GitHub Actions cache
-
+          context: .
+          push: true
+          tags: ${{ steps.vars.outputs.tag_list }}
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
