--- a/.github/workflows/docker-build-semistable.yml
+++ b/.github/workflows/docker-build-semistable.yml
@@ -5,7 +5,7 @@ name: Docker main to Dockerhub semistable
 on:
   push:
     branches:
-      - main # Trigger this workflow when changes are pushed to the 'main' branch
+      - semistable # Trigger this workflow when changes are pushed to the 'main' branch
 
 jobs:
   build_and_push:
